Bxc 4627 iiif v3 streaming (#1777)
* BXC-4627 starting on tests

* BXC-4627 updating manifest service

* BXC-4627 update tests

* BXC-4627 clean up

* BXC-4627 updte logic, add unit test, account for edge cases

* BXC-4627 simplify logic

* BXC-4627 update return value

* BXC-4627 update access copies service and move method up in iiif v3 manifest service

* BXC-4627 undo access copies service changes

* BXC-4627 moving code from access copies filter

* BXC-4627 adding query filter

* BXC-4627 update tests and search filters

* BXC-4627 add new services to context

* BXC-4627 add new AV filter

* BXC-4627 more accurate naming

* BXC-4627 update context

* BXC-4627 cleanup

* BXC-4627 use standard constants, update cross origin header in datastream controller

* BXC-4627 add duration to main canvas element

* BXC-4627 only set thumbnail section for images

* BXC-4627 move thumbnail check to images only